# berlin-gymnasium

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  justfile  ui.pen
.github/workflows/: deploy.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: address-input-no-dropdown.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: CHANGELOG.md  conflicts.md  schools_index.yaml
data/schools/: 01P03.yaml  01P06.yaml  01P18.yaml  01P22.yaml  01Y02.yaml  01Y04.yaml  01Y07.yaml  01Y08.yaml  01Y09.yaml  01Y11.yaml  01Y12.yaml  01Y13.yaml  02Y01.yaml  02Y03.yaml  02Y04.yaml  02Y05.yaml  02Y06.yaml  02Y07.yaml  02Y08.yaml  03P10.yaml  03Y03.yaml  03Y04.yaml  03Y08.yaml  03Y10.yaml  03Y13.yaml  03Y14.yaml  03Y15.yaml  03Y16.yaml  03Y17.yaml  04P04.yaml  04P11.yaml  04P24.yaml  04P35.yaml  04P47.yaml  04Y01.yaml  04Y02.yaml  04Y03.yaml  04Y04.yaml  04Y05.yaml  04Y06.yaml  (+66 more)
pipeline/: agent.py  merge_cache.py  models.py  photos.py  pipeline.yaml  pyproject.toml  run.py  seed.py  validate.py  writer.py
public/: styles.css
src/: address_state.rs  app.rs  hash_router.rs  i18n.rs  main.rs  models.rs  state.rs
src/components/: address_input.rs  detail_section.rs  filter_chips.rs  filter_panel.rs  language_switcher.rs  mod.rs  rating_display.rs  school_card.rs  sort_controls.rs  view_toggle.rs
src/pages/: detail.rs  listing.rs  map.rs  mod.rs  not_found.rs
src/services/: geocoding.rs  mod.rs  (+1 more)
(+46 files in other folders)
