[package]
name = "berlin-gymnasien"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_meta = "0.8"
leptos-use = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement"] }
console_log = "1"
console_error_panic_hook = "0.1"
log = "0.4"
leaflet = "0.5"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", features = ["json"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.10"
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
